--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam soluta, ea nemo nesciunt in similique provident voluptas vel? Molestias est at commodi corporis, fugit explicabo beatae possimus odio nobis velit?</p>  
 </body>
 </html>
