--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travelgram - Perfil de Viagens</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam soluta, ea nemo nesciunt in similique provident voluptas vel? Molestias est at commodi corporis, fugit explicabo beatae possimus odio nobis velit?</p>  
 </body>
-</html>
+</html> 
