--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
     <title>Travelgram - Perfil de Viagens</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
+
 <body>
+
+    <div class="bg-surface-color">
+        <nav class="container"> 
+            <a href="#" id="logo">
+                <img src="assets/assets/Logo.svg" alt="Logomarca">
+            </a>
+        
+            <ul id="primary-menu">
+                <li>
+                    <a href="#">
+                        <img src="assets/assets/MagnifyingGlass.svg" alt="ícone de lupa">
+                    </a>
+                </li>
+
+                <li><a href="#">Explorer</a></li>
+                <li><a href="#">Minhas Viagens</a></li>
+                <li><a href="#">
+                    <img src="assets/Profile pic.png" alt="Foto de perfil">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
+<header></header>
+
 </body>
 </html> 
