--- a/index.html
+++ b/index.html
@@ -69,6 +69,22 @@
                     
             </div>
         </header>
+
     </div>
+
+  <main class="container">
+   <img src="assets/assets/Image 01.png" alt="...">
+   <img src="assets/assets/Image 02.png" alt="...">
+   <img src="assets/assets/Image 03.png" alt="...">
+   <img src="assets/assets/Image 04.png" alt="...">
+   <img src="assets/assets/Image 05.png" alt="...">
+   <img src="assets/assets/Image 06.png" alt="...">
+   <img src="assets/assets/Image 07.png" alt="...">
+   <img src="assets/assets/Image 08.png" alt="...">
+   <img src="assets/assets/Image 09.png" alt="...">
+   <img src="assets/assets/Image 10.png" alt="...">
+   <img src="assets/assets/Image 11.png" alt="...">
+   <img src="assets/assets/Image 12.png" alt="...">
+  </main>  
 </body>
 </html> 
