--- a/index.html
+++ b/index.html
@@ -72,19 +72,30 @@
 
     </div>
 
-  <main class="container">
-   <img src="assets/assets/Image 01.png" alt="...">
-   <img src="assets/assets/Image 02.png" alt="...">
-   <img src="assets/assets/Image 03.png" alt="...">
-   <img src="assets/assets/Image 04.png" alt="...">
-   <img src="assets/assets/Image 05.png" alt="...">
-   <img src="assets/assets/Image 06.png" alt="...">
-   <img src="assets/assets/Image 07.png" alt="...">
-   <img src="assets/assets/Image 08.png" alt="...">
-   <img src="assets/assets/Image 09.png" alt="...">
-   <img src="assets/assets/Image 10.png" alt="...">
-   <img src="assets/assets/Image 11.png" alt="...">
-   <img src="assets/assets/Image 12.png" alt="...">
-  </main>  
+    <main class="container">
+        <img src="assets/assets/Image 01.png" alt="...">
+        <img src="assets/assets/Image 02.png" alt="...">
+        <img src="assets/assets/Image 03.png" alt="...">
+        <img src="assets/assets/Image 04.png" alt="...">
+        <img src="assets/assets/Image 05.png" alt="...">
+        <img src="assets/assets/Image 06.png" alt="...">
+        <img src="assets/assets/Image 07.png" alt="...">
+        <img src="assets/assets/Image 08.png" alt="...">
+        <img src="assets/assets/Image 09.png" alt="...">
+        <img src="assets/assets/Image 10.png" alt="...">
+        <img src="assets/assets/Image 11.png" alt="...">
+        <img src="assets/assets/Image 12.png" alt="...">
+    </main> 
+
+    <footer class="container">
+        <span>
+          Travelgram &copy;  2024
+        </span>
+
+        <span>Termos de uso</span>
+
+        <span>Política de privacidade</span>
+    </footer>
+    
 </body>
 </html> 
