--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="#">Explorer</a></li>
                 <li><a href="#">Minhas Viagens</a></li>
                 <li><a href="#">
-                    <img src="assets/Profile pic.png" alt="Foto de perfil">
+                    <img src="assets/profile2.png" alt="Foto de perfil">
                     </a>
                 </li>
             </ul>
@@ -39,13 +39,13 @@
         <header>
             <div class="container">
                 <div id="profile">
-                    <img src="assets/Profile pic.png" alt="foto de perfil">
+                    <img src="assets/profile2.png" alt="foto de perfil">
                 </div>
 
-                <div>
-                        <h1>Isabela Torres</h1>
+                <div class="texto">
+                        <h1>Thamires Gabriel</h1>
                             <p>
-                            Amante de viagens, cultura e gastronomia. 🌍✈️  <br>
+                            Amante de viagens, cultura e gastronomia. 🌍 ✈️  <br>
                             Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸  
                             </p>
                 </div> 
@@ -96,6 +96,6 @@
 
         <span>Política de privacidade</span>
     </footer>
-    
+
 </body>
 </html> 
